infrastructure/nexus/nexus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: fima-infra
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: sonatype-nexus
    release: nexus
