infrastructure/nexus/nexus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: fima-infra
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nexus.fima.test
      http:
        paths:
          - backend:
              serviceName: nexus
              servicePort: 8081
